--- a/src/components/header.css
+++ b/src/components/header.css
@@ -6,12 +6,12 @@ body {
 
 header {
   background-color: gray;
-  width: 100%;
+  width: 45vw;
   height: 5em;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.2em;
 }
 
 p {
